--- a/css/asideStyle.css
+++ b/css/asideStyle.css
@@ -1,9 +1,12 @@
 @import './root.css';
+@import './rightStyle.css';
 aside{
     height: 100vh;
     /*background-color: var(--color-background);*/
 }
-
+aside .logo h1{
+    color: var(--color-dark);
+}
 aside .top{
     /*background:white;*/
     display: flex;
@@ -30,7 +33,7 @@ aside .close{
 /*sidebar*/
 
 aside .sidebar{
-    background: white;
+    background: var(--color-white);
     display: flex;
     flex-direction: column;
     height: 86vh;
@@ -97,4 +100,49 @@ aside .sidebar a:last-child{
     position: absolute;
     bottom: 2em;
     width: 100%;
+}
+
+
+
+/* mobile display*/
+@media screen and (max-width:768px) {
+    .container{
+        width: 100%;
+        grid-template-columns: 1fr;
+    }
+    aside{
+        position: fixed;
+        left:0;
+       background: var(--color-white);
+       width: 18em;
+       z-index: 3;
+       box-shadow: 1em 3em 4em var(--color-light);
+       height: 100vh;
+       padding-right: var(--card-padding);
+       display: none;
+       animation: showMenu 400ms ease forwards;
+    }
+    aside .logo{
+        margin-left: 1em;
+    }
+    aside .top .logo h1{
+        display: inline;
+    }
+    aside .sidebar h3{
+        display: inline;
+        
+    }
+    aside .sidebar a{
+        width: 100%;
+        height: 3.4em;
+    }
+    aside .close{
+        display: inline-block;
+        cursor: pointer;
+    }
+    @keyframes showMenu {
+        to{
+            left:0;
+        }
+    }
 }
