--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -3,10 +3,21 @@
     display: flex;
    
   width: 100%;
+  padding: 1em;
 }
+.search-bar:hover{
+    background: rgba(255, 255, 255, 0.8);
+    transition: all 300ms;
+}
+main .search-bar #search-city{
+    width: 100%;
+    background: rgba(255, 255, 255, 0);
+}
+
 #search-button{
     margin-left: auto;
-    background-color: white;
+    background-color: var(--color-white);
+    background: rgba(255, 255, 255, 0);
     color: var(--color-dark-variant);
 }
 main{
@@ -21,6 +32,13 @@ main .city-temp .mid{
     font-size: 2.4em;
 }
 
+main .city-temp .bottom{
+    display: flex;
+    
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
+
 /*#date{
    
     margin-top: 1em;
@@ -29,14 +47,14 @@ main .city-temp .mid{
 }*/
 main .card{
     display: flex;
-    background: white;
+    background: var(--color-white);
     padding: var(--card-padding);
     border-radius: var(--card-border-radius);
     margin-top: 1em;
    
     height: 300px;
     width: 100%;    
-    background-image: url(https://marketplace.canva.com/EAFDL6gbGVM/1/0/1600w/canva-green-minimalist-illustrated-landscape-desktop-wallpaper-UwgW9eDIQrQ.jpg);
+    /*background-image: url(https://marketplace.canva.com/EAFDL6gbGVM/1/0/1600w/canva-green-minimalist-illustrated-landscape-desktop-wallpaper-UwgW9eDIQrQ.jpg);*/
 }
 
 main .card .city-temp > div{
@@ -55,7 +73,7 @@ main .card .right-side{
     
 }
 main  > div{
-    background: white;
+    background: var(--color-white);
     padding: var(--card-padding);
     border-radius: var(--card-border-radius);
     margin-top: 0.8em;
@@ -65,16 +83,23 @@ main  > div{
 main .card2{
     display: grid;
     grid-template-columns: repeat(3,1fr);
+    background: var(--color-card);
     gap: 1.2em;
+}
+main .card2 .icon{
+    margin-left: auto;
+    margin-right: auto;
+    width: 5em;
+    height: 5em;
 }
 main .card2 :hover{
     background-attachment: fixed;
-   transform: scale(1.1);
-   transition: 0.2s;
+   transform: scale(1.05);
+   transition: 0.3s;
 }
 
 main .card2 > div{
-    background: white;
+    background: var(--color-white);
     padding: var(--card-padding);
     border-radius: var(--card-border-radius);
     margin-top: 1em;
@@ -87,6 +112,10 @@ main .card2 > div{
 .card .right-side .description{
     text-align: center;
 }
+.card .right-side .sun{
+    align-items: center;
+    justify-content: center;
+}
 h6{
     color: darkgray;
 }
@@ -94,4 +123,27 @@ main h1{
     display: flex;
     justify-content: center;
     
+}
+
+
+
+/*phone Display*/
+@media screen and (max-width:768px) {
+    .container{
+        width: 100%;
+        grid-template-columns: 1fr;
+    }
+    main{
+        margin-top: 8em;
+        padding: 0 1em;
+    }
+    main h1{
+        display: none;
+    /*    margin:0;
+        font-size: 0;*/
+    }
+    main .mid h1{
+        display: inline-block;
+        font-size: 1.6em;
+    }
 }
