--- a/css/darkTheme.css
+++ b/css/darkTheme.css
@@ -7,3 +7,6 @@
     --box-shadow: 0 2em 3em var(--color-light);
     --color-card: rgba(20,25,28,0.9);
 }
+/* #wind,#humid,#uv,#press,#visi{
+    filter: invert(1);
+} */
