--- a/css/animationStyle.css
+++ b/css/animationStyle.css
@@ -1,5 +1,5 @@
 @import './root.css';
-.bg{
+/*.bg{
     overflow:hidden;
       background:var(--color-background);
       position: absolute;
@@ -7,7 +7,7 @@
       left:0;
       right:0;
       bottom:0;
-      height: 100vh;
+      height: 100%;
       z-index: -1;
       position: fixed;
 }
@@ -101,6 +101,128 @@ bottom: 500px;
 @keyframes cloud {
  
   0%   { left: -100px; }
+  100% { left: 1800px; } 
+}
+.cloud:before {
+content: '';
+left: 50px;
+}
+.cloud:after {
+content: '';
+left: 25px;
+top: -10px;
+}*/
+
+
+.bg{
+    overflow:hidden;
+      background:var(--color-background);
+      position: absolute;
+      top:0;
+      left:0;
+      right:0;
+      bottom:0;
+      height: 100%;
+      z-index: -1;
+      position: fixed;
+}
+.mountain, .mountain-two, .mountain-three,.mountain-four, .mountain-five {
+  position: absolute;
+  bottom: 0;
+  border-left: 150px solid transparent;
+  border-right: 150px solid transparent;
+  border-bottom: 180px solid var(--mountain-color);
+  z-index: 1;
+}
+.mountain-two { 
+  left: 100px;
+  bottom: -20px;
+  opacity: .3;
+  z-index: 0;
+}
+.mountain-three {
+  left: -60px;
+  bottom:-10px;
+  opacity: .5;
+  z-index: 0;
+}
+.mountain-four {
+    left: 500px;
+    bottom:-10px;
+    border-left: 400px solid transparent;
+  border-right: 400px solid transparent;
+  border-bottom: 500px solid var(--mountain-color);
+    z-index:1;
+  }
+  .mountain-five {
+    left: 800px;
+    bottom:-60px;
+    border-left: 400px solid transparent;
+  border-right: 400px solid transparent;
+  border-bottom: 500px solid var(--mountain-color);
+    opacity: .5;
+    z-index:0;
+  }
+.mountain-top {
+  position: absolute;
+  right: -65px;
+  border-left: 65px solid transparent;
+  border-right: 65px solid transparent;
+  border-bottom: 77px solid var(--mountain-top);
+  z-index: 2;
+}
+.mountain-cap-1, .mountain-cap-2, .mountain-cap-3 {
+  position: absolute;
+  top: 70px;
+  border-left: 25px solid transparent;
+  border-right: 25px solid transparent;
+  border-top: 25px solid var(--mountain-top);
+}
+.mountain-cap-1 { left: -55px; }
+.mountain-cap-2 { left: -25px; }
+.mountain-cap-3 { left: 5px; }
+.cloud, .cloud:before, .cloud:after {
+position: absolute;
+width: 70px;
+  height: 30px;
+  background: var(--cloud-color);
+  -webkit-border-radius: 100px / 50px;
+  border-radius: 100px / 50px;
+}
+.cloud { 
+bottom: 500px;
+-webkit-animation: cloud 50s infinite linear;
+        animation: cloud 50s infinite linear;
+}
+#cloud-2{
+    width: 50px;
+  height: 20px;
+    bottom: 680px;
+-webkit-animation: cloud 30s infinite linear;
+        animation: cloud 30s infinite linear;
+}
+#cloud-3{
+    width: 140px;
+  height: 60px;
+    bottom: 150px;
+-webkit-animation: cloud 20s infinite linear;
+        animation: cloud 20s infinite linear;
+}
+#cloud-4{
+  width: 100px;
+height: 40px;
+  bottom: 230px;
+-webkit-animation: cloud 40s infinite linear;
+      animation: cloud 40s infinite linear;
+}
+
+@-webkit-keyframes cloud {
+  0%   { left: -150px; }
+  100% { left: 1800px; } 
+}
+@keyframes cloud {
+ 
+  0%   { left: -150px; }
   100% { left: 1800px; } 
 }
 .cloud:before {
