--- a/css/asideStyle.css
+++ b/css/asideStyle.css
@@ -48,22 +48,38 @@ aside h3{
 aside .sidebar a{
     display: flex;
     color: var(--color-info-dark);
-    margin-left: 1.8em;
-    gap: 1em;
+    
+    padding-left: 1.2em;
+    gap: 1.5em;
     align-items: center;
     position: relative;
     height: 2.7em;
     transition: all 300ms ease;
-
+    border-left: 4px solid transparent;
 }
 
+
 aside .sidebar a span{
-    font-size: 1.4em;
+    font-size:1.4em;
+}
+aside .sidebar a:hover{
+    color: var(--color-primary);
+    text-decoration: none;
+    border-left-color: var(--color-primary);
+    background: var(--color-light);
+}
+aside .sidebar a:hover span{
+    margin-left: 0.4em;
+    transition: all 350ms ease;
+    
+}
+aside .sidebar #weekForecast{
+    display: none;
 }
 
 /*aside .sidebar a:last-child{
 
-}*/
+}
 
 aside .sidebar a.active{
     background: var(--color-light);
@@ -100,7 +116,7 @@ aside .sidebar a:last-child{
     position: absolute;
     bottom: 2em;
     width: 100%;
-}
+}*/
 
 
 
@@ -112,12 +128,12 @@ aside .sidebar a:last-child{
     }
     aside{
         position: fixed;
-        left:0;
+        left:-100%;
        background: var(--color-white);
        width: 18em;
        z-index: 3;
        box-shadow: 1em 3em 4em var(--color-light);
-       height: 100vh;
+       height: 100%;
        padding-right: var(--card-padding);
        display: none;
        animation: showMenu 400ms ease forwards;
@@ -139,6 +155,9 @@ aside .sidebar a:last-child{
     aside .close{
         display: inline-block;
         cursor: pointer;
+    }
+    aside .sidebar #weekForecast{
+        display: flex;
     }
     @keyframes showMenu {
         to{
