--- a/css/root.css
+++ b/css/root.css
@@ -25,6 +25,12 @@
     --color-card:rgba(255, 255, 255, 0.9);
 
     --box-shadow:0 2em 3em var(--color-light);
+
+    --cloud-color: white;
+    --mountain-color:#7ac1e4;
+    --mountain-top:#ceeaf6;
+
+    --filter: invert(0%);
 }
 
 *{
