--- a/css/asideStyle.css
+++ b/css/asideStyle.css
@@ -2,7 +2,9 @@
 @import './rightStyle.css';
 aside{
     height: 100vh;
-    /*background-color: var(--color-background);*/
+}
+aside h1{
+    font-size: 1.2em;
 }
 aside .logo h1{
     color: var(--color-dark);
@@ -77,46 +79,6 @@ aside .sidebar #weekForecast{
     display: none;
 }
 
-/*aside .sidebar a:last-child{
-
-}
-
-aside .sidebar a.active{
-    background: var(--color-light);
-    color: var(--color-primary);
-    margin-left: 0;
-}
-aside .sidebar a.active:before{
-    content: "";
-    width: 6px;
-    height: 100%;
-    background: var(--color-primary);
-}
-aside .sidebar a.active span{
-    color: var(--color-primary);
-    margin-left: calc(1em-3px);
-}
-
-
-aside .sidebar a:hover{
-    color: var(--color-primary);
-    text-decoration: none;
-    
-}
-aside .sidebar a:hover span{
-    margin-left: 0.4em;
-    transition: all 350ms ease;
-    
-}
-aside .sidebar a ul {
-    font-size: 0.4em;
-
-}
-aside .sidebar a:last-child{
-    position: absolute;
-    bottom: 2em;
-    width: 100%;
-}*/
 
 
 
